POR/RefEdge/src/objects/Reference_Basic_Information__c.object
<CustomObject>
    <description>Basic Information for Account &amp; Contact(Bound 5)</description>
    <fields>
        <fullName>ACV_Influenced__c</fullName>
        <inlineHelpText>ACV (Annual Contract Value) Influenced indicates the total value of closed:won Opportunities for which the Account/Contact was used as a reference in the current year.</inlineHelpText>
        <label>ACV Influenced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Level_RUL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this flag is set, any RUL settings on Contacts related to this Account are ignored</description>
        <inlineHelpText>When selected only the Account&apos;s Completed Uses per Time Period are considered when determining the Limit Reached.</inlineHelpText>
        <label>Ignore Contact Use Limits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Reference_Basic_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Att_Ref_Last_Update_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Att Ref Last Update By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reference_Profiles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attribute_Count__c</fullName>
        <description>Counts the number of associated attributes tagged to an account or contact.</description>
        <label>Attribute Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attribute_Ids__c</fullName>
        <label>Attribute Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attributes__c</fullName>
        <label>Attributes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Reference_Basic_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Available_Balance_Points__c</fullName>
        <label>Current Available Balance Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Period_Completed_Uses__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Default Period Completed Uses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generic_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generic Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_Reason__c</fullName>
        <inlineHelpText>Please provide the reason this reference program member is &quot;Inactive&quot;.</inlineHelpText>
        <label>Inactive Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Influitive_Id__c</fullName>
        <externalId>true</externalId>
        <label>Influitive_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inherit_Attributes_from_All_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inherit Attributes from All Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inherit_Attributes_from_Primary_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inherit Attributes from Primary Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Contact_Limit_Reached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Contact Limit Reached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Referenceable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Reference Program Member checkbox indicates whether or not a Contact and/or Account is a customer reference, which is one factor that determines if a record may be included in Reference Search results. Reference Status must be Active or Caution.</description>
        <inlineHelpText>The Reference Program Member checkbox indicates whether or not a Contact and/or Account is a customer reference, which is one factor that determines if a record may be included in Reference Search results. Reference Status must be Active or Caution.</inlineHelpText>
        <label>Reference Program Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Referenceable_f__c</fullName>
        <formula>IF(Is_Referenceable__c , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference Program Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joined_Reference_Program__c</fullName>
        <label>Joined Reference Program</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Label_Ids1__c</fullName>
        <label>Label Ids1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_Ids2__c</fullName>
        <label>Label Ids2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Att_Ref_Update__c</fullName>
        <label>Last Att/Ref Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Refresh_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Update By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reference_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Refresh_Date__c</fullName>
        <label>Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Refresh_Sent__c</fullName>
        <label>Last Update Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lifetime_Points__c</fullName>
        <label>Lifetime Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Managed_Reference_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Reference requests for this Account will always be routed to the Customer Reference Team.</inlineHelpText>
        <label>Managed Reference Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Attributes__c</fullName>
        <label>Parent Attributes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Profile_Update_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Profile Update Owner field identifies the individual designated as the point of contact for Reference Profile Updates for the Account.

If no user is identified in this field, then the Profile Update Minder notification should be sent to the Reference Owner.

If there is not a Reference Owner identified in the Reference Owner field, then the Profile Update Minder notification should be sent to the Account Owner.</description>
        <inlineHelpText>The Profile Update Owner field identifies the individual designated as the point of contact for Reference Profile Updates for the Account.</inlineHelpText>
        <label>Profile Update Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reference_Profiles2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RUL_Activities_available__c</fullName>
        <formula>RUL_Activities_will_do__c -  RUL_Activities_used__c</formula>
        <inlineHelpText>The Available Uses is the difference between the Uses per Time Period and Completed uses.</inlineHelpText>
        <label>Available Uses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RUL_Activities_used__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The Completed Uses is the sum of completed reference activities or uses in the specified Time Period. On a Contact record this applies to that specific Contact. On an Account it is an aggregate of all Account and related Contact uses.</inlineHelpText>
        <label>Completed Uses</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RUL_Activities_will_do__c</fullName>
        <inlineHelpText>The Uses per Time Period is the number of reference uses available during the Time Period (e.g., 2 uses in 60 days where 2 is the Uses per Time Period).</inlineHelpText>
        <label>Uses per Time Period</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RUL_Date_Available__c</fullName>
        <inlineHelpText>The Date Available is when the Account or Contact may next be used for a reference activity based on the Last Use Date if the reference use limit has been reached (i.e., Limit Reached).</inlineHelpText>
        <label>Date Available</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RUL_Date_Available_f__c</fullName>
        <description>The Date Available is when the Account or Contact may next be used for a reference activity based on the Last Use Date if the reference use limit has been reached (i.e., Limit Reached).</description>
        <formula>IF( RUL_Limit_Reached__c, RUL_Last_Activity_Date__c+ RUL_Period__c  , null)</formula>
        <inlineHelpText>The Date Available is when the Account or Contact may next be used for a reference activity based on the Last Use Date if the reference use limit has been reached (i.e., Limit Reached).</inlineHelpText>
        <label>Date Available</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RUL_Last_Activity_Date__c</fullName>
        <inlineHelpText>The Last Use Date is the last date the Account or Contact was used for a reference activity.</inlineHelpText>
        <label>Last Use Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RUL_Last_Updated_By__c</fullName>
        <label>Last Updated By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RUL_Limit_Reached__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The Limit Reached checkbox is selected when the Uses per Time Period are exhausted.</inlineHelpText>
        <label>Limit Reached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RUL_Period__c</fullName>
        <inlineHelpText>The Time Period is the range of time during which a reference use limit has been set (e.g., 3 uses in 90 days where 90 days is the Time Period).</inlineHelpText>
        <label>Time Period</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ref_Profile_Summary__c</fullName>
        <inlineHelpText>A Summary entered here will show in Ref Search under the About icon.</inlineHelpText>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reference_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Reference Owner field identifies the individual, other than the Account Owner, designated as point of contact for reference requests for the Account.</inlineHelpText>
        <label>Reference Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reference_Basic_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Program_Candidate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This Account or Contact is being considered for membership in the Customer Reference Program.</inlineHelpText>
        <label>Reference Program Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReferenceabilityType_Ids1__c</fullName>
        <label>ReferenceabilityType Ids1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceabilityType_Ids2__c</fullName>
        <label>ReferenceabilityType Ids2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referenceability_Status__c</fullName>
        <inlineHelpText>The Reference Status for an Account or Contact, in combination with Reference Program Membership, determines if a record may be included in Reference Search results. Only records with Active or Caution status may be included.</inlineHelpText>
        <label>Reference Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referenceability__c</fullName>
        <inlineHelpText>The types reference activities this Account or Contact has approved.</inlineHelpText>
        <label>Referenceability</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Refresh_Ageing__c</fullName>
        <formula>TODAY() - DateValue( Last_Refresh_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Update Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roll_up_Attributes_to_All_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roll up Attributes to All Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roll_up_Attributes_to_Primary_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roll up Attributes to Primary Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roll_up_Referenceability_to_All_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roll up Referenceability to All Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roll_up_Referenceability_to_Primary_Acc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roll up Ref to Primary Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Reference_Use__c</fullName>
        <label>Lifetime reference uses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Reference_Use_f__c</fullName>
        <formula>HYPERLINK(&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;ShowTotalReferenceUsePage?Id=&apos;+ Id , TEXT( Total_Reference_Use__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lifetime reference uses</label>
        <type>Text</type>
    </fields>
    <label>Reference Profile</label>
    <listViews>
        <fullName>Account_Reward_Summaries</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Current_Available_Balance_Points__c</columns>
        <columns>Lifetime_Points__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Referenceable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Contact__c</field>
            <operation>equals</operation>
        </filters>
        <label>Account Reward Summaries</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Attributes__c</columns>
        <columns>Referenceability__c</columns>
        <columns>Reference_Program_Candidate__c</columns>
        <columns>Is_Referenceable__c</columns>
        <columns>Referenceability_Status__c</columns>
        <columns>Parent_Attributes__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Managed_Reference_Accounts</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Reference_Owner__c</columns>
        <columns>Referenceability_Status__c</columns>
        <columns>Referenceability__c</columns>
        <columns>RUL_Last_Activity_Date__c</columns>
        <columns>Total_Reference_Use__c</columns>
        <columns>RUL_Limit_Reached__c</columns>
        <columns>RUL_Date_Available__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Managed_Reference_Account__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Managed Reference Accounts</label>
    </listViews>
    <listViews>
        <fullName>Peer2Peer_Reference_Accounts</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Reference_Owner__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Referenceability_Status__c</columns>
        <columns>Referenceability__c</columns>
        <columns>RUL_Limit_Reached__c</columns>
        <columns>RUL_Date_Available__c</columns>
        <columns>Total_Reference_Use__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Referenceable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Contact__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Managed_Reference_Account__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Peer2Peer Reference Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Reference_Accounts</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Is_Referenceable__c</columns>
        <columns>Reference_Owner__c</columns>
        <columns>Managed_Reference_Account__c</columns>
        <columns>RUL_Last_Activity_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Is_Referenceable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Reference Accounts</label>
    </listViews>
    <listViews>
        <fullName>Reference_Accounts_Limit_Reached</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RUL_Activities_used__c</columns>
        <columns>RUL_Activities_available__c</columns>
        <columns>RUL_Last_Activity_Date__c</columns>
        <columns>RUL_Date_Available__c</columns>
        <columns>RUL_Limit_Reached__c</columns>
        <columns>RUL_Period__c</columns>
        <columns>RUL_Activities_will_do__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Reference_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RUL_Limit_Reached__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Reference Accounts, Limit Reached</label>
    </listViews>
    <listViews>
        <fullName>Reference_Contacts</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Referenceability_Status__c</columns>
        <columns>Reference_Owner__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RUL_Limit_Reached__c</columns>
        <columns>RUL_Date_Available__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Referenceable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Contact__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Reference Contacts</label>
    </listViews>
    <listViews>
        <fullName>Reference_Program_Candidates</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reference_Program_Candidate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Reference Program Candidates</label>
    </listViews>
    <nameField>
        <displayFormat>RBI-{00000}</displayFormat>
        <label>Reference Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Profiles</pluralLabel>
    <recordTypes>
        <fullName>Account</fullName>
        <active>true</active>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact</fullName>
        <active>true</active>
        <label>Contact</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VR_Checkfor_IsReferenceable</fullName>
        <active>true</active>
        <description>You must select a &apos;Reference Status&apos; if &apos;Reference Program Member&apos; checkbox is selected.</description>
        <errorConditionFormula>AND(Is_Referenceable__c = true, ISPICKVAL(Referenceability_Status__c, &apos;&apos;))</errorConditionFormula>
        <errorMessage>You must select a &apos;Reference Status&apos; if &apos;Reference Program Member&apos; checkbox is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Checkfor_ReferenceabilityStatus</fullName>
        <active>true</active>
        <description>You must select &apos;Reference Program Member&apos; checkbox if &apos;Reference Status&apos; is &apos;Active&apos; or &apos;Caution&apos;.</description>
        <errorConditionFormula>AND(
OR(ISPICKVAL(Referenceability_Status__c, &apos;Active&apos;), ISPICKVAL(Referenceability_Status__c, &apos;Caution&apos;)) ,
Is_Referenceable__c = false
)</errorConditionFormula>
        <errorMessage>You must select &apos;Reference Program Member&apos; checkbox if &apos;Reference Status&apos; is &apos;Active&apos; or &apos;Caution&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Checkfor_UseTimePeriod</fullName>
        <active>true</active>
        <description>If &apos;Time Period&apos; is set then &apos;Uses Per Time Period&apos; MUST also be set.</description>
        <errorConditionFormula>AND(NOT(ISNULL(RUL_Period__c)),
ISNULL(RUL_Activities_will_do__c))</errorConditionFormula>
        <errorMessage>If &apos;Time Period&apos; is set then &apos;Uses Per Time Period&apos; MUST also be set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Checkfor_UsesPerTimePeriod</fullName>
        <active>true</active>
        <description>If &apos;Uses Per Time Period&apos; is set then &apos;Time Period&apos; MUST also be set.</description>
        <errorConditionFormula>AND(NOT(ISNULL(RUL_Activities_will_do__c)),
ISNULL(RUL_Period__c))</errorConditionFormula>
        <errorMessage>If &apos;Uses Per Time Period&apos; is set then &apos;Time Period&apos; MUST also be set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_RUL_Activites</fullName>
        <active>true</active>
        <description>You must specify &apos;Uses per Time Period&apos; in the period from 1 to 99</description>
        <errorConditionFormula>( RUL_Activities_will_do__c  &gt; 99) || (RUL_Activities_will_do__c &lt; 1)</errorConditionFormula>
        <errorMessage>You must specify &apos;Uses per Time Period&apos; in the period from 1 to 99</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_RUL_Period</fullName>
        <active>true</active>
        <description>You must specify &apos;Time Period&apos; in the period from 1 to 365</description>
        <errorConditionFormula>(RUL_Period__c &gt; 365) ||(RUL_Period__c &lt; 1)</errorConditionFormula>
        <errorMessage>You must specify &apos;Time Period&apos; in the period from 1 to 365</errorMessage>
    </validationRules>
</CustomObject>